# FreeLing

./: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  README  README-CVS  THANKS  TODO  configure  configure.ac
APIs/java/: Makefile  README  analyzer.java  libmorfo_java.i  std_string.i  ustring.h
APIs/java/classes_aux/: maco.java
APIs/perl/: Makefile  README  libmorfo_perl.i  libmorfo_perl.pm  sample.perl
APIs/php/: analyzer.php  sample.php
APIs/python/: Makefile  README  libmorfo_python.i  sample.py
APIs/python/contrib/: pyfreeling.cc
data/: Makefile.am  Makefile.in  gmon.out
data/ca/: dicc.src  senses16.src  senses30.src
data/ca/coref/: coref.abm
data/config/: as.cfg  ca.cfg  cy.cfg  en.cfg  es.cfg  gl.cfg  it.cfg  pt.cfg
data/en/: dicc.src  senses16.src
data/es/: senses16.src  senses30.src
data/es/coref/: coref.abm
data/es/ner/: ner-1pc.lex  ner-3abs.lex  ner.abm  ner.lex  ner.rgf
data/gl/: dicc.src
data/pt/: README
doc/: Makefile.am  README  refman.cfg
doc/diagrams/: dates.dia  np.dia
doc/grammars/: ca+esLABELINGtags
doc/refman/: FlexLexer_8h.html  FlexLexer_8h__incl.md5  FlexLexer_8h_source.html  README  accents_8cc.html  accents_8cc__incl.map  accents_8cc__incl.md5  accents_8h.html  accents_8h__dep__incl.map  accents_8h__dep__incl.md5  accents_8h__incl.map  accents_8h__incl.md5  accents_8h_source.html  accents__modules_8cc.html  accents__modules_8cc__incl.map  accents__modules_8cc__incl.md5  accents__modules_8h.html  accents__modules_8h__dep__incl.map  accents__modules_8h__dep__incl.md5  accents__modules_8h__incl.map  accents__modules_8h__incl.md5  accents__modules_8h_source.html  aligner_8h.html  aligner_8h__dep__incl.md5  aligner_8h__incl.md5  aligner_8h_source.html  annotated.html  automat_8cc.html  automat_8cc__incl.map  automat_8cc__incl.md5  automat_8h.html  automat_8h__dep__incl.map  automat_8h__dep__incl.md5  automat_8h__incl.md5  automat_8h_source.html  bioner_8cc.html  bioner_8cc__incl.map  bioner_8cc__incl.md5  bioner_8h.html  bioner_8h__dep__incl.map  (+953 more)
doc/userman/: README  biblio.bib  userman.tex
doc/userman/html/: WARNINGS  images.pl  images.tex  internals.pl  labels.pl  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  node37.html  node38.html  node39.html  node4.html  node40.html  (+59 more)
libcfg+/: INSTALL  Makefile.am  Makefile.in  cfg+.c  cfgfile.c  cmdline.c  parse.c  shared.c
src/: Makefile.am  Makefile.in
src/include/: Makefile.am  Makefile.in  freeling.h
src/include/freeling/: accents.h  accents_modules.h  automat.h  bioner.h  coref.h  coref_fex.h  corrector.h  database.h  dep_rules.h  dependencies.h  dictionary.h  disambiguator.h  hmm_tagger.h  locutions.h  maco.h  maco_options.h  malt_plugin.h  nec.h  ner.h  np.h  numbers_modules.h  phd.h  phoneticDistance.h  probabilities.h  semdb.h  senses.h  simplesearch.h  soundChange.h  splitter.h  suffixes.h  sufrule.h  tokenizer.h  traces.h
src/libmorfo/: Makefile.am  Makefile.in  accents.cc  accents_modules.cc  automat.cc  bioner.cc  database.cc  dates.cc  dates_modules.cc  dep_rules.cc  dependencies.cc  dictionary.cc  hmm_tagger.cc  locutions.cc  maco.cc  maco_options.cc  malt_plugin.cc  nec.cc  np.cc  numbers.cc  numbers_modules.cc  probabilities.cc  punts.cc  quantities.cc  quantities_modules.cc  semdb.cc  senses.cc  splitter.cc  suffixes.cc  tagger.cc  tokenizer.cc  traces.cc
src/libmorfo/chart_parser/: chart.cc  chart_parser.cc  grammar.cc  readgram.cc  readgram.l
src/libmorfo/coref/: coref.cc  coref_fex.cc
src/libmorfo/corrector/: corrector.cc  phoneticDistance.cc  phonetics.cc  similarity.cc  soundChange.cc
src/libmorfo/disambiguator/: disambiguator.cc
src/libmorfo/disambiguator/ukb/: common.h  disambGraph.cc  fileElem.cc  kbGraph.cc  kbGraph.h  prank.h  version.h
src/libmorfo/relax_tagger/: constraint_grammar.cc  readCG.cc  readCG.l  relax.cc  relax_tagger.cc
src/main/: Makefile.am  Makefile.in  README  analyze  analyze.server  analyze.utf  analyzer.cc  config.h  coref_sample.cc  initialize  sample.cc
src/main/LKB/: LKB.cfg  README  sppp  test.xml  test2.xml  test3.xml  test4.xml
src/main/LKB/src/: LKBMakefile  LKBanalyzer.cc  LKBconfig.h
src/main/sample_analyzer/: README  analyze  analyze.utf  analyzer.cc  analyzer_client.cc  analyzer_clientUTF.cc  analyzer_client_npipe.cc  analyzer_client_socket.cc  analyzer_server.cc  analyzer_serverSTD.cc  analyzer_server_npipe.cc  analyzer_server_socket.cc  config.h  initialize  iso2utf.h  socket.h
src/main/sample_server_analyzer/: README
src/main/simple_examples/: README  fl1_morph  fl1_morph.cc  fl2_tagger.cc  fl3_chunker.cc  fl4_dependences.cc  fl5_coref.cc  sample  sample.cc  sample_server.cc
src/utilities/: Makefile.am  Makefile.in  TRAIN  compile_kb.cc  compile_ukb.cc  convertdict.cc  hmm_smooth.perl  indexdict.cc  make-probs-file.perl  train-relax.perl  unk-tags  unk-tags.parole
src/utilities/coref/: Makefile  classify.cc  classify_pcl.cc  encodeAnCora.cc  parseAnCora.cc  train.cc  trainModel.sh
src/utilities/corrector/: createIndex.cc  dicc2phon.cc
src/utilities/nec/: TRAIN.sh  lexicon.cc  train.cc
src/utilities/ner/: README  TRAIN.sh  lexicon.cc  train.cc
