
pkgdata_DATA =

diagdatadir = $(pkgdatadir)/doc/diagrams
diagdata_DATA = diagrams/*

refmandatadir = $(pkgdatadir)/doc/refman

refmanlatexdatadir = $(pkgdatadir)/doc/refman/latex
refmanlatexdata_DATA = refman/latex/*.pdf

refmanhtmldatadir = $(pkgdatadir)/doc/refman/html
refmanhtmldata_DATA = refman/html/*

usermandatadir = $(pkgdatadir)/doc/userman
usermandata_DATA = userman/*.pdf userman/*.html

usermanhtmldatadir = $(pkgdatadir)/doc/userman/html
usermanhtmldata_DATA = userman/html/*


