nobase_include_HEADERS = freeling.h freeling/FlexLexer.h freeling/accents.h freeling/accents_modules.h freeling/automat.h freeling/chart.h freeling/chart_parser.h freeling/constraint_grammar.h freeling/dates.h freeling/dates_modules.h freeling/dependencies.h freeling/dep_rules.h freeling/dictionary.h freeling/grammar.h freeling/hmm_tagger.h freeling/locutions.h freeling/maco.h freeling/maco_options.h freeling/nec.h freeling/np.h freeling/numbers.h freeling/numbers_modules.h freeling/probabilities.h freeling/punts.h freeling/quantities.h freeling/quantities_modules.h freeling/relax.h freeling/relax_tagger.h freeling/senses.h freeling/semdb.h freeling/splitter.h freeling/suffixes.h freeling/sufrule.h freeling/tagger.h freeling/tokenizer.h freeling/tokens.h freeling/traces.h freeling/dependency_parser.h
